<resources>
    <string name="app_name">VodafoneAirlineChallenge</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="countries">Countries</string>
    <string name="headquarter">Headquarters</string>
    <string name="visit">Visit</string>
    <string name="no_web_view_detected">No web view detected</string>
    <string name="add_new_air_line">Add new Air Line</string>
    <string name="air_line_name">Air line name</string>
    <string name="air_line_slogan">Slogan</string>
    <string name="air_line_country">Country</string>
    <string name="air_line_headquarters">Headquarters</string>
    <string name="air_line_established_year">Established Date</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="airline_added_successfully">Air Line Added Successfully</string>
    <string name="fill_all_required_data">Fill All Required Data</string>
    <string name="cancel_create_airline">cancel</string>
</resources>